working on draw card function

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -95,12 +95,12 @@ main {
                         
                     }
     
-                    .urban-one {
+                    .urban-0 {
                         background-color: $second-color;
                         width: 85%;
                     }
     
-                    .urban-two {
+                    .urban-1 {
                         background-color: $fourth-color;
                         width: 70%;
                     }
