tweaked a bit the datalist suggestion options

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -45,11 +45,13 @@ header {
             color: white;
             margin-left: 5px;
             font-size: 20px;
+            cursor: pointer;
         }
 
         .search-bar {
             width: 300px;
             font-size: 20px;
+
         }
     }
 
