--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -116,6 +116,12 @@ main {
             }
         }
     }
+    .summary {
+        border: 1px solid gray;
+        text-align: center;
+        padding: 10px;
+        margin: 10px;
+    }
 }
 
 .test-class {
