--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,6 +36,13 @@ header {
         margin: 20px auto;
     }
 
+    @media (max-width: 460px) {
+
+        h2 {
+            font-size: 18px;
+        }
+    }
+
 
     .search-btn-wrapper {
         form {
@@ -59,7 +66,19 @@ header {
         .search-bar {
             width: 300px;
             font-size: 20px;
+        }
 
+        @media (max-width: 460px) {
+            .search-btn {
+                height: 24px;
+                font-size: 16px;
+                line-height: 24px;
+            }
+
+            .search-bar {
+                width: 250px;
+                font-size: 16px;
+            }
         }
     }
 
@@ -114,6 +133,56 @@ main {
             }
         }
     }
+
+    @media (max-width: 900px) {
+        .cards-wrapper {
+            padding: 15px;
+    
+            .card {
+                background-color: white;
+                width: 250px;
+                padding: 10px;
+                margin: 5px;
+    
+                .urban-scores-wrapper {
+                    
+                    .bar {
+                        width: 95%;
+                        height: 16px;
+        
+                }
+                
+                }
+            }
+        }
+            
+    }
+
+    @media (max-width: 550px) {
+        .cards-wrapper {
+            padding: 15px;
+    
+            .card {
+                background-color: white;
+                width: 150px;
+                padding: 10px;
+                margin: 2px;
+    
+                .urban-scores-wrapper {
+                    
+                    .bar {
+                        width: 95%;
+                        height: 16px;
+        
+                }
+                
+                }
+            }
+        }
+            
+    }
+
+
     .summary {
         border: 1px solid gray;
         text-align: center;
