--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -86,6 +86,12 @@ header {
         margin-top: 60px;
         background-color: pink;
     }
+
+    .error-label {
+        color: darkred;
+        font-weight: bold;
+        text-align: center;
+    }
 }
 
 main {
@@ -132,6 +138,7 @@ main {
             
             }
         }
+    
     }
 
     @media (max-width: 900px) {
@@ -189,4 +196,8 @@ main {
         padding: 10px;
         margin: 10px;
     }
+}
+
+footer {
+    text-align: center;
 }
