first version complete

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -84,7 +84,6 @@ header {
 
     .compare-city-wrapper {
         margin-top: 60px;
-        background-color: pink;
     }
 
     .error-label {
@@ -195,6 +194,7 @@ main {
         text-align: center;
         padding: 10px;
         margin: 10px;
+        min-width: 80%;
     }
 }
 
