--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,7 +7,7 @@ $second-color: rgb(45, 136, 45);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Delius', cursive;
 }
 
 // Helper classes
@@ -84,6 +84,7 @@ header {
 
     .compare-city-wrapper {
         margin-top: 60px;
+        
     }
 
     .error-label {
